[package]
name = "ghanon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "CLI tool to anonymize GitHub identity in repositories"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.17"
anyhow = "1.0"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
regex = "1.9"
